--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 anyhow = "1.0"
 clap = { version = "4.5", features = ["derive", "env"] }
 colored = "2.1"
+futures = "0.3"
 graph-networks-registry = "0.7.0"
 regex = "1.11.2"
 reqwest = { version = "0.12", features = ["json"] }
