--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ reqwest = { version = "0.12", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.40", features = ["full"] }
+update-informer = "1.1"
